fix overflow of all elements

--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -104,7 +104,8 @@ a:hover {
 }
 
 .banner-info {
-    height: 240px;
+    min-height: 160px;
+    padding: 40px 140px;
     background-color: #17161d;
 }
 
@@ -117,7 +118,6 @@ a:hover {
 
 .banner-info__header {
     font-size: 1.875em;
-    padding-top: 40px;
     text-align: center;
 }
 
@@ -127,15 +127,13 @@ a:hover {
 }
 
 .banner-info__text {
-    overflow: hidden;
     font-size: 1.250em;
     font-weight: 100;
     text-transform: uppercase;
     text-align: center;
     color: #4b485d;
     height: 20%;
-    width: 60%;
-    margin: 15px auto;
+    margin: 20px auto;
 }
 
 .link-button {
@@ -151,30 +149,34 @@ a:hover {
     height: 35px;
     line-height: 35px;
     margin: 0 auto;
-    margin-top: 20px;
 }
 
 .notes-group {
-    height: 250px;
+    min-height: 170px;
+    overflow: auto;
+    padding: 40px 20px;
 }
 
 .note{
-    width: 50%;
+    width: 48%;
     height: 100%;
     float: left;
+    padding: 0 1%;
 }
 
 .note__header {
     font-size: 1.125em;
-    margin-left: 20px;
-    margin-top: 40px;
+    /*margin-left: 20px;*/
+    /*margin-top: 40px;*/
 }
 
 .note__text {
-    overflow: hidden;
-    height: 40%;
-    margin: 10px 20px;
-    margin-bottom: 20px;
+    /*overflow: hidden;*/
+    /*height: 40%;*/
+    /*margin: 10px 20px;*/
+    /*margin-bottom: 20px;*/
+    font-size: 0.875em;
+    margin-top: 10px;
 }
 
 .note__button {
@@ -183,8 +185,7 @@ a:hover {
     background: url("images/link_button_small.png");
     font-size: 0.875em;
     line-height: 25px;
-    margin-left: 20px;
+    margin-top: 20px;
 }
-
 
 
